--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-insurance.provider.url=http://localhost:8080/insurnace-service/getAllPlanss
+insurnace.provider.url=http://localhost:8080/insurnace-service/getAllPlanss
