--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-insurnace.provider.url=http://localhost:8080/insurnace-service/getAllPlanss
+insurance.provider.url=http://localhost:8080/insurnace-service/getAllPlan
